# ct-scraper-service

./: .env.example  .gitignore  README.md  debug_local.csv  fix_span.py  hartford_page.html  inspect.py  pyproject.toml  replace_block.py  requirements.txt  run_scraper.py
ct_scraper/: .gitignore  __init__.py  config.py  counties.py  database.py  emailer.py  geocode.py  models.py  pipeline.py  schemas.py  scrape_cases.py  towns.py
ct_scraper/api/: app.py  routes.py
ct_scraper/templates/: digest.html
ct_scraper_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deploy/: DO_DEPLOY.md  ct-scraper-api.service  ct-scraper-digest.service  ct-scraper-digest.timer  ct-scraper-pdf.service  ct-scraper-pdf.timer  ct-scraper-scrape.service  ct-scraper-scrape.timer  geoleads.nginx
downloads_ct_summons/: llm_extract_only.csv  llm_test_results.csv  llm_update_by_case.csv
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend-legacy/: app.js  index.html  styles.css
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: CasesMap.tsx  DotGrid.tsx  LogoLoop.tsx  Nav.tsx  RotatingText.tsx  TextType.tsx  dot-grid.css
scripts/: backfill_geocode.py  check_first_records.py  check_hartford.py  check_page_links.py  compare_pages.py  debug_pagination.py  dump_page.py  pdf_downloader.py  pdf_llm_extract.py  scrape_daily.py  send_digest.py  setup_db.py  test_imports.py  test_page_switch.py
(+12 files in other folders)
